Trying to get bazel to build with pybind dependency.

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,9 @@
 # ===========================================================================
+# Keep root directory clean
+# ===========================================================================
+build --symlink_prefix=build/bazel-
+
+# ===========================================================================
 # C++20 Standard
 # ===========================================================================
 build --cxxopt=-std=c++20
